Fix toggle comment with empty line in selection

BUG: 458126